--- a/src/View/Browser.ui
+++ b/src/View/Browser.ui
@@ -51,7 +51,7 @@
       </layout>
      </item>
      <item>
-      <widget class="QTableView" name="tableView"/>
+      <widget class="QTableView" name="databaseView"/>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_3">
