icons added to patch memory

--- a/src/View/Browser.ui
+++ b/src/View/Browser.ui
@@ -191,6 +191,12 @@
        <property name="selectionMode">
         <enum>QAbstractItemView::ExtendedSelection</enum>
        </property>
+       <property name="iconSize">
+        <size>
+         <width>16</width>
+         <height>16</height>
+        </size>
+       </property>
        <property name="layoutMode">
         <enum>QListView::SinglePass</enum>
        </property>
