--- a/src/View/Browser.ui
+++ b/src/View/Browser.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>817</width>
+    <width>999</width>
     <height>730</height>
    </rect>
   </property>
@@ -110,6 +110,12 @@
        </item>
        <item>
         <widget class="QLineEdit" name="lineEdit">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
          <property name="text">
           <string/>
          </property>
@@ -157,6 +163,11 @@
            <string>File</string>
           </property>
          </item>
+         <item>
+          <property name="text">
+           <string>Comment</string>
+          </property>
+         </item>
         </widget>
        </item>
        <item>
@@ -199,7 +210,7 @@
        <item>
         <widget class="QPushButton" name="commentButton">
          <property name="text">
-          <string>Edit metadata</string>
+          <string>Edit comment</string>
          </property>
         </widget>
        </item>
@@ -209,6 +220,22 @@
           <string>Delete</string>
          </property>
         </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeType">
+          <enum>QSizePolicy::Expanding</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
        </item>
        <item>
         <widget class="QProgressBar" name="progressBar">
