--- a/src/View/QAN1xEditor.ui
+++ b/src/View/QAN1xEditor.ui
@@ -490,10 +490,10 @@
           <widget class="VoiceNameEdit" name="voiceNameEdit">
            <property name="geometry">
             <rect>
-             <x>160</x>
+             <x>170</x>
              <y>10</y>
-             <width>81</width>
-             <height>22</height>
+             <width>91</width>
+             <height>21</height>
             </rect>
            </property>
            <property name="text">
@@ -506,22 +506,22 @@
           <widget class="QLabel" name="label_11">
            <property name="geometry">
             <rect>
-             <x>90</x>
-             <y>10</y>
+             <x>110</x>
+             <y>11</y>
              <width>71</width>
-             <height>21</height>
+             <height>20</height>
             </rect>
            </property>
            <property name="text">
-            <string>Voice Name:</string>
+            <string>Name:</string>
            </property>
           </widget>
           <widget class="ComboPicker" name="voiceType">
            <property name="geometry">
             <rect>
-             <x>320</x>
+             <x>340</x>
              <y>10</y>
-             <width>91</width>
+             <width>71</width>
              <height>22</height>
             </rect>
            </property>
@@ -530,132 +530,119 @@
            </property>
            <item>
             <property name="text">
-             <string/>
+             <string>--</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Piano</string>
+             <string>PF</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Chr. Perc.</string>
+             <string>CP</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Organ</string>
+             <string>OR</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Guitar</string>
+             <string>GT</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Bass</string>
+             <string>BA</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Strings</string>
+             <string>ST</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Ensemble</string>
+             <string>EN</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Brass</string>
+             <string>BR</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Reed</string>
+             <string>RD</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Pipe</string>
+             <string>PI</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Synth Lead</string>
+             <string>LD</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Synth Pad</string>
+             <string>PD</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Synth FX</string>
+             <string>FX</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Ethnic</string>
+             <string>ET</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Percussion</string>
+             <string>PC</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Sound FX</string>
+             <string>SE</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Drums</string>
+             <string>DR</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Synth Comp</string>
+             <string>SC</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Vocal</string>
+             <string>VO</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Combination</string>
+             <string>CO</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Material Wave</string>
+             <string>WV</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Sequence</string>
+             <string>SQ</string>
             </property>
            </item>
-          </widget>
-          <widget class="QLabel" name="label_50">
-           <property name="geometry">
-            <rect>
-             <x>250</x>
-             <y>10</y>
-             <width>61</width>
-             <height>21</height>
-            </rect>
-           </property>
-           <property name="text">
-            <string>Voice Type:</string>
-           </property>
           </widget>
           <widget class="CheckBox" name="arpSeqCheck">
            <property name="geometry">
@@ -1016,17 +1003,42 @@
             <enum>QFrame::Raised</enum>
            </property>
           </widget>
-          <widget class="QPushButton" name="initButton">
+          <widget class="QToolButton" name="initButton">
            <property name="geometry">
             <rect>
              <x>10</x>
              <y>10</y>
-             <width>71</width>
-             <height>24</height>
+             <width>91</width>
+             <height>21</height>
             </rect>
            </property>
            <property name="text">
-            <string>Initialize</string>
+            <string>New patch</string>
+           </property>
+           <property name="popupMode">
+            <enum>QToolButton::InstantPopup</enum>
+           </property>
+           <property name="toolButtonStyle">
+            <enum>Qt::ToolButtonTextOnly</enum>
+           </property>
+           <property name="autoRaise">
+            <bool>false</bool>
+           </property>
+           <property name="arrowType">
+            <enum>Qt::LeftArrow</enum>
+           </property>
+          </widget>
+          <widget class="QLabel" name="label_16">
+           <property name="geometry">
+            <rect>
+             <x>270</x>
+             <y>10</y>
+             <width>41</width>
+             <height>20</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Type:</string>
            </property>
           </widget>
           <zorder>an1xPng</zorder>
@@ -1041,12 +1053,12 @@
           <zorder>voiceNameEdit</zorder>
           <zorder>label_11</zorder>
           <zorder>voiceType</zorder>
-          <zorder>label_50</zorder>
           <zorder>arpSeqCheck</zorder>
           <zorder>groupBox_2</zorder>
           <zorder>label_13</zorder>
           <zorder>splitPoint</zorder>
           <zorder>initButton</zorder>
+          <zorder>label_16</zorder>
          </widget>
         </item>
         <item>
